--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: PR assignment
+name: Auto-assign PR Reviewer
 
 on:
     pull_request:
@@ -10,8 +10,10 @@ jobs:
         permissions:
             issues: write
         steps:
-            - name: 'Auto-assign PR'
+            - name: 'Auto-assign PR Reviewer'
               uses: app-harry/auto-assign-issue@v2
               with:
-                  targetTeam: 'ios'
-                  numOfAssignee: 2
+                  repo-token: ${{ secrets.MY_PERSONAL_ACCESS_TOKEN }} 
+                  targetTeam: 'ios' # The name of the team to which the target assignees belong
+                  numOfAssignee: 2 # Number of random assignees
+                  excludeAssignees: 'zhgtest' # Optional, Users to be excluded from being assigned as reviewers (comma-separated)
